myproject/deploy/yamls/nodejs-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: nodejs-webapp
  name: nodejs-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: nodejs-webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: nodejs-webapp
      name: nodejs-webapp
    spec:
      containers:
        - image: index.docker.io/myproject/nodejs-webapp:latest
          imagePullPolicy: Always
          name: nodejs-webapp
          ports:
            - containerPort: 8080
          resources: {}
      imagePullSecrets:
        - name: index-docker-io-imagepullsecret
      restartPolicy: Always
      securityContext: {}
status: {}
