myproject/deploy/yamls/nodejs-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: nodejs-webapp
  name: nodejs-webapp
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: nodejs-webapp
  type: ClusterIP
status:
  loadBalancer: {}
